--- a/app/src/main/res/layout/alladdhabits.xml
+++ b/app/src/main/res/layout/alladdhabits.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.derekshultz.as1.MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.derekshultz.as1.TodaysHabitsActivity">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:id="@+id/allHabitsListView"
         android:clickable="true"
-        android:layout_below="@+id/linearLayout"
+        android:layout_below="@+id/allHabitsPageTitle"
         android:layout_alignEnd="@+id/addHabitButton"
         android:layout_above="@+id/addHabitButton" />
 
@@ -30,37 +32,13 @@
         android:layout_gravity="right"
         android:textSize="20sp" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/goToTodaysHabitsButtonText"
-            android:id="@+id/goToTodaysHabitButton"
-            android:layout_above="@+id/allHabitsListView"
-            android:layout_alignParentStart="true"
-            android:layout_weight="0.7"
-            android:layout_gravity="left" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/allAddHabitsTitleText"
-            android:id="@+id/allHabitsPageTitle"
-            android:layout_alignParentTop="true"
-            android:layout_alignEnd="@+id/addHabitButton"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:layout_gravity="right"
-            android:textSize="30sp" />
-
-    </LinearLayout>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/allAddHabitsTitleText"
+        android:id="@+id/allHabitsPageTitle"
+        android:textSize="30sp"
+        android:layout_alignParentTop="false" />
 
 </RelativeLayout>
