--- a/app/src/main/res/layout/todaysHabits.xml
+++ b/app/src/main/res/layout/todaysHabits.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.derekshultz.as1.MainActivity">
+    tools:context="com.example.derekshultz.as1.TodaysHabitsActivity">
 
     <ListView
         android:layout_width="match_parent"
@@ -16,41 +16,16 @@
         android:id="@+id/allHabitsListView"
         android:layout_weight="1"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/linearLayout2" />
+        android:layout_below="@+id/todaysHabitsTitle" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/todaysHabitsTitle"
-        android:layout_alignEnd="@+id/allHabitsListView"
-        android:id="@+id/linearLayout2">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/todaysHabitsTitleText"
-            android:id="@+id/todaysHabitsTitle"
-            android:textSize="30sp"
-            android:layout_alignTop="@+id/goToAllAddHabitsButton"
-            android:layout_alignParentStart="true"
-            android:layout_alignBottom="@+id/goToAllAddHabitsButton"
-            android:layout_toStartOf="@+id/goToAllAddHabitsButton"
-            android:gravity="center"
-            android:layout_gravity="left"
-            android:layout_weight="3" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/goToAllAddHabitsButtonText"
-            android:id="@+id/goToAllAddHabitsButton"
-            android:layout_alignTop="@+id/allHabitsListView"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="right"
-            android:layout_weight="0.7" />
-
-    </LinearLayout>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/todaysHabitsTitleText"
+        android:id="@+id/todaysHabitsTitle"
+        android:textSize="30sp"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="left" />
 
 </RelativeLayout>
