--- a/app/src/main/res/layout/content_add_habit.xml
+++ b/app/src/main/res/layout/content_add_habit.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_all_add_habits"
+    android:id="@+id/content_add_habit"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.derekshultz.as1.AllHabitsActivity"
-    tools:showIn="@layout/activity_all_add_habits">
+    tools:context="com.example.derekshultz.as1.AddHabitActivity"
+    tools:showIn="@layout/add_habit">
 
 </RelativeLayout>
