--- a/app/src/main/res/menu/allhabitsmenu.xml
+++ b/app/src/main/res/menu/allhabitsmenu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/allAddHabitsItem"
-        android:title="@string/allHabitsTitleText"
-        android:onClick="goToAllHabits" />
+        android:id="@+id/todaysHabitsItem"
+        android:title="@string/todaysHabitsTitleText"
+        android:onClick="goToTodaysHabits" />
 
     <item
         android:id="@+id/addHabitItem"
